# dual_autodiff

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/md/: analytical_solutions.md  api.md  installation.md  overview.md  usage.md
dual_autodiff/: __init__.py  autodiff.py  dual.py  version.py
dual_autodiffx/: __init__.py  buildwheels.sh  pyproject.toml  setup.py
dual_autodiffx/dual_autodiffx/: __init__.py  autodiff.pyx  dual.pxd  dual.pyx
notebooks/: benchmark.py  learning_steps.ipynb  learning_steps.py
tests/: test_autodiff.py  test_dual.py
