[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
dynamic = ["version"]  # Indicate version will be dynamically set by setuptools_scm
description = "A Python package for forward-mode automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Lucas Curtin", email = "lucas.curtin@gmail.com" },
]

# Dependencies required for runtime
dependencies = [
    "numpy",
    "scipy"
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "dual_autodiff/version.py"  # Where the generated version will be saved
