[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
dynamic = ["version"]
description = "A Python package for forward-mode automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Lucas Curtin", email = "lucas.curtin@gmail.com" },
]

# Core dependencies for runtime
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "jupyter",
    "Sphinx",
    "docker",
    "cibuildwheel"
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "dual_autodiff/version.py"

[tool.setuptools.packages.find]
include = ["dual_autodiff"]
exclude = ["notebooks", "tests"]
