[build-system]
requires = [
    "setuptools",
    "wheel",
    "build",
    "Cython>=3.0.0",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiffx"
dynamic = ["version"]
description = "A Cythonized implementation of forward-mode automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Lucas Curtin", email = "lucas.curtin@gmail.com" },
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "dual_autodiffx/version.py"

[tool.setuptools.packages.find]
include = ["dual_autodiffx"]
exclude = ["tests"]
